# places_autocomplete_rs

./: .env  .gitignore  Cargo.toml  README.md  remove_csv_dup.py  search_files.py  split_csv.py
.xbp/: redeploy.sh  xbp.json
csv_data/: postcodes.csv
data/: data_nl_1.csv  data_nl_13.csv  data_nl_17.csv
src/: generator.rs  lib.rs  main.rs  query.rs
src/api/: actix_client.rs  mod.rs
src/io/: create.rs  list.rs  mod.rs
src/parser/: csv.rs  enumurate_house_numbers.rs  mod.rs
