[package]
name = "places_autocomplete_rs"
version = "0.1.0"
edition = "2021"
authors = ["Floris & Lucas @ XYLEX Group"]

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
chrono = "0.4.40"
moka = { version = "0.12.10", features = ["future"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rayon = "1.10.0"
redis = { version = "0.29.0", features = [
    "ahash",
    "aio",
    "json",
    "tokio-comp",
] }
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["socks"] }
futures = "0.3.31"
dotenv = "0.15.0"
lazy_static = "1.5.0"
csv = "1.3.1"
indicatif = "0.17.11"
actix-files = "0.6.6"
dashmap = "6.1.0"

